# seqcal

./: README.md  environment.yml  pyproject.toml
examples/: example.fna  run_example.sh
src/seqcal/: __init__.py  cli.py  core.py
