[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seqcal"
version = "0.1.0"
description = "Primer-guided sequence extraction and copy-number calculation tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "seqcal developers"}
]
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5",
    "tqdm>=4.60"
]

[project.scripts]
seqcal = "seqcal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
